Se agrega autenticacion con jwt y documentacion en readmi
