# src/utils/files/oas_api.json
@@ -25,6 +25,15 @@
               "schema": {
                 "type": "string"
               }
+            },
+            {
+              "name": "authorization",
+              "in": "header",
+              "required": true,
+              "description": "Token",
+              "schema": {
+                "type": "string"
+              }
             }
           ],
           "responses": {
@@ -51,6 +60,9 @@
             },
             "404": {
               "description": "Tarea no encontrada"
+            },
+            "401": {
+              "description": "Unauthorized - Token no válido"
             }
           }
         }
@@ -65,6 +77,15 @@
               "in": "path",
               "required": true,
               "description": "Tipo de formato con el que se desea procesar el archivo",
+              "schema": {
+                "type": "string"
+              }
+            },
+            {
+              "name": "authorization",
+              "in": "header",
+              "required": true,
+              "description": "Token",
               "schema": {
                 "type": "string"
               }
@@ -93,6 +114,9 @@
             "400": {
               "description": "Error en la solicitud o formato inválido"
             },
+            "401": {
+              "description": "Unauthorized - Token no válido"
+            },
             "500": {
               "description": "Error interno del servidor"
             }
@@ -100,5 +124,5 @@
         }
       }
     }
-  }
+}
   
